--- a/deny.toml
+++ b/deny.toml
@@ -15,3 +15,11 @@ allow = [
   "BSD-3-Clause",
   "MIT",
 ]
+
+[[licenses.clarify]]
+name = "encoding_rs"
+version = "*"
+expression = "(Apache-2.0 OR MIT) AND BSD-3-Clause"
+license-files = [
+  { path = "COPYRIGHT", hash = 0x39f8ad31 }
+]
