refactor: setup flake how I prefer it

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,14 +8,14 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 2
-indent_style = spaces
+indent_style = space
 insert_final_newline = true
 trim_trailing_whilespace = true
 
 [README]
-indent_style = tabs
+indent_style = tab
 max_line_length = 70
 
 [*.rs]
 indent_size = 4
-indent_style = spaces
+indent_style = space
