build: improve versioning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@
 
 [package]
 name = "pr-tracker"
-version = "1.2.0"
-authors = ["Alyssa Ross <hi@alyssa.is>"]
+version = "1.4.0"
+authors = ["Alyssa Ross <hi@alyssa.is>", "Patrick <patrick@failmail.dev>"]
 edition = "2018"
 license = "AGPL-3.0-or-later WITH GPL-3.0-linking-exception"
 
